docs/apache-airflow-providers-amazon/2.6.0/_sources/_api/airflow/providers/amazon/aws/operators/sns/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.operators.sns`
====================================================

.. py:module:: airflow.providers.amazon.aws.operators.sns

.. autoapi-nested-parse::

   Publish message to SNS queue



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.operators.sns.SnsPublishOperator




.. py:class:: SnsPublishOperator(*, target_arn: str, message: str, aws_conn_id: str = 'aws_default', subject: Optional[str] = None, message_attributes: Optional[dict] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Publish a message to Amazon SNS.

   :param aws_conn_id: aws connection to use
   :type aws_conn_id: str
   :param target_arn: either a TopicArn or an EndpointArn
   :type target_arn: str
   :param message: the default message you want to send (templated)
   :type message: str
   :param subject: the message subject you want to send (templated)
   :type subject: str
   :param message_attributes: the message attributes you want to send as a flat dict (data type will be
       determined automatically)
   :type message_attributes: dict

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['message', 'subject', 'message_attributes']

      

   .. py:attribute:: template_ext
      :annotation: :Sequence[str] = []

      

   .. py:attribute:: template_fields_renderers
      

      

   .. py:method:: execute(self, context: airflow.utils.context.Context)

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



